@@ -1,38 +1,47 @@
-package com.kim.websocketTest;
+package com.kim.websocketTest.websocket;
 
-import com.kim.websocketTest.ExampleHandler;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.stereotype.Component;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.reactive.HandlerMapping;
+import org.springframework.web.reactive.config.EnableWebFlux;
 import org.springframework.web.reactive.config.WebFluxConfigurer;
 import org.springframework.web.reactive.handler.SimpleUrlHandlerMapping;
+import org.springframework.web.reactive.socket.WebSocketHandler;
 import org.springframework.web.reactive.socket.server.support.WebSocketHandlerAdapter;
+import reactor.core.publisher.Flux;
 
 
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 @Configuration
-@RequiredArgsConstructor
+@Slf4j
 public class WebSocketConfig implements WebFluxConfigurer {
 
-    private final ExampleHandler exampleHandler;
+    @Autowired
+    private ExampleHandler exampleHandler;
+
 
     @Bean
-    public SimpleUrlHandlerMapping simpleUrlHandlerMapping() {
-        SimpleUrlHandlerMapping mapping = new SimpleUrlHandlerMapping();
-        mapping.setUrlMap(Map.of("/ws/**", exampleHandler));
-        mapping.setOrder(1);
-        // CORS 설정 추가
-        CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.addAllowedOrigin("*");
-        mapping.setCorsConfigurations(Collections.singletonMap("/ws/**", corsConfiguration));
-        return mapping;
+    public HandlerMapping webSocketHandlerMapping() {
+        Map<String, WebSocketHandler> map = Map.of("/websocket", exampleHandler);
+
+        SimpleUrlHandlerMapping handlerMapping = new SimpleUrlHandlerMapping();
+        handlerMapping.setOrder(1);
+        handlerMapping.setUrlMap(map);
+
+        return handlerMapping;
     }
 
     @Bean
     public WebSocketHandlerAdapter handlerAdapter() {
         return new WebSocketHandlerAdapter();
     }
+
 }
